# dootstrapper

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  README.public.md  WORKSPACE  cdk.json  index.bzl  index.ts  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  tslint.yml  typedoc.json
package/: BUILD  BUILD.bazel  LICENCE  README.md  index.ts  package-lock.json  package.json
package/handlers/: BUILD  base-handler.ts  blocks.ts  index.ts  package-lock.json  package.json  rollup.config.js  slack-subscription-handler.spec.ts  slack-subscription-handler.ts
package/handlers/helpers/: base-handler.ts  create-deployment-status-blocks.spec.ts  create-deployment-status-blocks.ts
package/resources/: BUILD  backend-deployment.spec.ts  backend-deployment.ts  base-deployment.ts  constants.ts  doostrapper-delivery.ts  dootstrapper-delivery.spec.ts  enums.ts  frontend-deployment.spec.ts  frontend-deployment.ts  interfaces.ts
package/resources/constructs/: backend-deployment.spec.ts  backend-deployment.ts  base-pipeline.spec.ts  base-pipeline.ts  cdk-app-pipeline.spec.ts  cdk-app-pipeline.ts  core.spec.ts  core.ts  credential-store.ts  deployment-notification.ts  frontend-cdn-pipeline.spec.ts  frontend-cdn-pipeline.ts  frontend-deployment.spec.ts  frontend-deployment.ts  multi-env-pipeline.spec.ts  multi-env-pipeline.ts  slack-subscription.spec.ts  slack-subscription.ts  web-distribution.spec.ts  web-distribution.ts
package/resources/constructs/test/: backend-stack.json  frontend-stack.json  (+3 more)
package/resources/helpers/: create-buildspec-with-credentials.ts  resolve-runtime-environments.ts
package/resources/internal-constructs/: assets-distribution.spec.ts  assets-distribution.ts  base-deployment.ts  base-pipeline.spec.ts  base-pipeline.ts  cdk-app-pipeline.ts  credential-store.spec.ts  frontend-cdn-pipeline.spec.ts  frontend-cdn-pipeline.ts  slack-subscription.ts  web-distribution.spec.ts
package/resources/test/: backend-stack.json  frontend-stack.json  stack-with-custom-config.spec.json  stack-with-min-config.spec.json
package/utils/: validate-schema.ts
(+110 files in other folders)
