package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

exports_files(
    [
        "package.json",
        "package-lock.json",
    ],)

ts_library(
    name = "library",
    srcs = glob(
        [
            "index.ts",
        ],
        exclude = ["**/*.spec.ts"],
    ),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//resources:library",
        "//handlers:library",
        "@npm//:node_modules",
    ],
)

pkg_npm(
    name = "doostrapper",
    srcs = ["package.json","README.md"],
    deps = [
    ":library",
    ],
)
